# sveden-table-matrixizer

./: .gitignore  README.md  pyproject.toml
sveden_table_matrixizer/: __init__.py  def_funcs.py  errors.py  table_body_extractor.py  table_head_extractor.py  tables_extractor.py  types.py  utils.py
