[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sveden-table-matrixizer"
version = "1.0.2"
description = "Module for converting HTML tables (from /sveden pages) into a matrix of BeautifulSoup tags"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Gorsipisk", email = "bestdevelopment.work@gmail.com" },
]
maintainers = [
    { name = "BestTvGU", email = "bestdevelopment.work@gmail.com" }
]

keywords = ["html", "table", "parsing", "beautifulsoup", "matrix", "sveden", "async", "sveden"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "beautifulsoup4==4.14.3",
    "aiohttp==3.13.5",
]

[project.urls]
Homepage = "https://github.com/Gorshipiskp/sveden-table-matrixizer"
Repository = "https://github.com/Gorshipiskp/sveden-table-matrixizer.git"
Documentation = "https://github.com/Gorshipiskp/sveden-table-matrixizer#readme"
Issues = "https://github.com/Gorshipiskp/sveden-table-matrixizer/issues"

[tool.setuptools]
packages = ["sveden_table_matrixizer"]

[tool.setuptools.package-data]
sveden_table_matrixizer = ["py.typed"]